// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. pull quote in culture magazine 1`] = `
.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c1 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  color: #333333;
  font-family: TimesModern-Regular,TimesModern-Regular-fallback,serif;
  font-size: 25px;
  line-height: 30px;
}

.c2 cite {
  font-style: normal;
}

@media (min-width:768px) {
  .c2 {
    font-size: 30px;
    line-height: 35px;
  }
}

<blockquote
  url=""
>
  <div
    className="c0"
    marginBottom="15px"
    marginTop={0}
  >
    <div
      className="c1"
      color="#696969"
      fontFamily="TimesModern-Bold, TimesModern-Bold-fallback, serif"
      fontSize={75}
      marginBottom="-40px"
      marginLeft={-3}
      marginTop={0}
    >
      “
    </div>
    <div
      className="c2"
    >
      <cite>
        Some content
      </cite>
    </div>
    <div
      alignItems="center"
      className="c0"
      display="flex"
      flexDirection="row"
      height={20}
      marginTop="10px"
    >
      <div
        className="c1"
        color="#696969"
        fontFamily="Roboto-Regular, Roboto-Regular-fallback, sans-serif"
        fontSize={12}
        lineHeight="13px"
        marginBottom={0}
      >
        A caption
      </div>
      <div
        className="c1"
        color="#696969"
        fontFamily="Roboto-Regular, Roboto-Regular-fallback, sans-serif"
        fontSize={12}
        lineHeight="13px"
        marginBottom={0}
      >
        , Some extra text
      </div>
    </div>
  </div>
</blockquote>
`;

exports[`2. pull quote in style magazine 1`] = `
.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c1 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  color: #333333;
  font-family: TimesModern-Regular,TimesModern-Regular-fallback,serif;
  font-size: 25px;
  line-height: 30px;
}

.c2 cite {
  font-style: normal;
}

@media (min-width:768px) {
  .c2 {
    font-size: 30px;
    line-height: 35px;
  }
}

<blockquote
  url=""
>
  <div
    className="c0"
    marginBottom="15px"
    marginTop={0}
  >
    <div
      className="c1"
      color="#696969"
      fontFamily="TimesModern-Bold, TimesModern-Bold-fallback, serif"
      fontSize={75}
      marginBottom="-40px"
      marginLeft={-5}
      marginTop={0}
    >
      “
    </div>
    <div
      className="c2"
    >
      <cite>
        Some content
      </cite>
    </div>
    <div
      alignItems="center"
      className="c0"
      display="flex"
      flexDirection="row"
      height={20}
      marginTop="10px"
    >
      <div
        className="c1"
        color="#696969"
        fontFamily="Roboto-Regular, Roboto-Regular-fallback, sans-serif"
        fontSize={12}
        lineHeight="13px"
        marginBottom={0}
      >
        A caption
      </div>
      <div
        className="c1"
        color="#696969"
        fontFamily="Roboto-Regular, Roboto-Regular-fallback, sans-serif"
        fontSize={12}
        lineHeight="13px"
        marginBottom={0}
      >
        , Some extra text
      </div>
    </div>
  </div>
</blockquote>
`;

exports[`3. pull quote in the sunday times magazine 1`] = `
.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c1 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  color: #333333;
  font-family: TimesModern-Regular,TimesModern-Regular-fallback,serif;
  font-size: 25px;
  line-height: 30px;
}

.c2 cite {
  font-style: normal;
}

@media (min-width:768px) {
  .c2 {
    font-size: 30px;
    line-height: 35px;
  }
}

<blockquote
  url=""
>
  <div
    className="c0"
    marginBottom="15px"
    marginTop={0}
  >
    <div
      className="c1"
      color="#696969"
      fontFamily="TimesModern-Bold, TimesModern-Bold-fallback, serif"
      fontSize={75}
      marginBottom="-40px"
      marginLeft={-2}
      marginTop={0}
    >
      “
    </div>
    <div
      className="c2"
    >
      <cite>
        Some content
      </cite>
    </div>
    <div
      alignItems="center"
      className="c0"
      display="flex"
      flexDirection="row"
      height={20}
      marginTop="10px"
    >
      <div
        className="c1"
        color="#696969"
        fontFamily="Roboto-Regular, Roboto-Regular-fallback, sans-serif"
        fontSize={12}
        lineHeight="13px"
        marginBottom={0}
      >
        A caption
      </div>
      <div
        className="c1"
        color="#696969"
        fontFamily="Roboto-Regular, Roboto-Regular-fallback, sans-serif"
        fontSize={12}
        lineHeight="13px"
        marginBottom={0}
      >
        , Some extra text
      </div>
    </div>
  </div>
</blockquote>
`;
